# DGCOMP-says

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
deploy/: DEPLOY.md  bootstrap.sh  dgcomp.service  dgcomp.timer  sync-db.sh
src/dgcomp/: __init__.py  cli.py  config.py  ingest.py
src/dgcomp/publish/: buttondown.py
src/dgcomp/sources/: client.py  extract.py
src/dgcomp/vocab/: filter.py  pipeline.py  segment.py  store.py  tokenize.py  validate.py
tests/: test_buttondown.py  test_cli.py  test_client.py  test_extract.py  test_filter.py  test_pipeline.py  test_segment.py  test_store.py  test_tokenize.py  test_validate.py
