[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgcomp"
version = "0.1.0"
description = "Track first-occurring words in EU Commission decisions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Enrico Alemani" }]

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "regex>=2024.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
]

[project.scripts]
dgcomp = "dgcomp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dgcomp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
